contrast and margin fix

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a {
 }
 
 .main-button a {
-	background-color: #FFCF52;
+	background-color: #002752;
 	border-radius: 5px;
 	padding: 10px 15px;
 	display: inline-block;
@@ -40,7 +40,7 @@ a {
 .section-heading .line-dec {
 	width: 30px;
 	height: 5px;
-	background-color: #FFCF52;
+	background-color: #002752;
 }
 .section-heading h1 {
 	font-size: 22px;
@@ -51,7 +51,7 @@ a {
 
 /* Pre Header Style */
 #pre-header {
-	background-color: #FFCF52;
+	background-color: #002752;
 	text-align: center;
 }
 #pre-header span {
@@ -94,7 +94,7 @@ a {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
-	color: #FFCF52;
+	color: #002752;
 }
 .navbar:after {
 	width: 100%;
@@ -109,14 +109,14 @@ a {
 	background-image: none;
 }
 .navbar-dark .navbar-toggler {
-	border-color: #FFCF52;
-	background-color: #FFCF52;	
+	border-color: #002752;
+	background-color: #002752;	
 	height: 50px;
 	outline: none;
 }
 .navbar-dark .navbar-toggler-icon:after {
 	content: '\f0c9';
-	color: #FFF;
+	color: #004FA3;
 	font-size: 22px;
 	line-height: 30px;
 	font-family: 'FontAwesome';
@@ -145,7 +145,7 @@ a {
 .banner .caption .line-dec {
 	width: 30px;
 	height: 5px;
-	background-color: #FFCF52;
+	background-color: #002752;
 }
 .banner .caption p {
 	margin-top: 15px;
@@ -161,6 +161,7 @@ a {
 	border: 1px solid #eee;
 	padding: 20px;
 	transition: all 0.5s;
+	margin: 5px;
 }
 .featured-item:hover {
 	opacity: 0.9;
@@ -176,13 +177,13 @@ a {
 	transition: all 0.5s;
 }
 .featured-item:hover h4 {
-	color: #FFCF52;
+	color: #002752;
 }
 .featured-item h6 {
-	color: #FFCF52;
+	color: #002752;
+	margin-bottom: 5px;
 	font-size: 15px;
 	font-weight: 700;
-	margin-bottom: 0px;
 }
 .owl-theme .owl-dots {
 	text-align: center;
@@ -192,7 +193,7 @@ a {
 	outline: none;
 }
 .owl-theme .owl-dots .active span {
-	background-color: #FFCF52!important;
+	background-color: #002752!important;
 }
 .owl-theme .owl-dots .owl-dot span {
 	background-color: #aaa;
@@ -207,7 +208,7 @@ a {
 
 /* Subscribe Style */
 .subscribe-form {
-	background-color: #ffe39d;
+	background-color: #004FA3;
 	padding: 80px 0px;
 	text-align: center;
 }
@@ -254,7 +255,7 @@ a {
 	border-radius: 5px;
 	padding: 10px 15px;
 	display: inline-block;
-	color: #FFCF52;
+	color: #002752;
 	font-size: 14px;
 	text-transform: uppercase;
 	font-weight: 300;
@@ -296,7 +297,7 @@ a {
 	transition: all 0.5s;
 }
 .footer .footer-menu a:hover {
-	color: #FFCF52;
+	color: #002752;
 	text-decoration: none;
 }
 .footer .social-icons {
@@ -318,7 +319,7 @@ a {
 	transition: all 0.5s;
 }
 .footer .social-icons a:hover {
-	background-color: #FFCF52;
+	background-color: #002752;
 }
 
 /* Sub Footer Style */
@@ -332,7 +333,7 @@ a {
 	line-height: 60px;
 }
 .sub-footer a {
-	color: #FFCF52;
+	color: #002752;
 	text-decoration: none;
 }
 
@@ -357,14 +358,14 @@ a {
 	transition: all 0.5s;
 }
 .featured .featured-item:hover h4 {
-	color: #FFCF52;
+	color: #002752;
 }
 #filter button {
 	outline: none;
 }
 #filter .btn-primary.focus,
 .btn-primary:focus {
-	color: #FFCF52!important;
+	color: #002752!important;
 	box-shadow: none!important;
 }
 #filters .btn-primary {
@@ -426,9 +427,9 @@ a {
 }
 .page-navigation ul li a:hover,
 .page-navigation ul li.current-page a {
-	background-color: #FFCF52;
-	border-color: #FFCF52;
-	color: #fff;
+	background-color: #002752;
+	border-color: #002752;
+	color: #004FA3;
 }
 
 
@@ -454,7 +455,7 @@ a {
 	margin-top: 0px;
 }
 .single-product .right-content h6 {
-	color: #FFCF52;
+	color: #002752;
 	font-size: 17px;
 	font-weight: 700;
 	margin-top: 10px;
@@ -465,7 +466,7 @@ a {
 }
 .single-product .right-content span {
 	font-size: 14px;
-	color: #FFCF52;
+	color: #002752;
 	font-weight: 500;
 	display: inline-block;
 	margin-bottom: 15px;
@@ -490,7 +491,7 @@ a {
 .single-product .right-content .button {
 	margin-left: 15px;
 	cursor: pointer;
-	background-color: #FFCF52;
+	background-color: #002752;
 	outline: none;
 	border-radius: 5px;
 	padding: 10px 15px;
@@ -518,10 +519,10 @@ a {
 	transition: all 0.5s;
 }
 .single-product .right-content .down-content span a:hover {
-	color: #FFCF52;
+	color: #002752;
 }
 .single-product .right-content .down-content span a:hover i {
-	background-color: #FFCF52;
+	background-color: #002752;
 }
 .single-product .right-content .down-content span a i {
 	transition: all 0.5s;
@@ -595,7 +596,7 @@ a {
 	font-weight: 400;
 }
 .about-page .right-content span a:hover i {
-	background-color: #FFCF52;
+	background-color: #002752;
 }
 
 
@@ -650,11 +651,11 @@ a {
 	font-weight: 400;
 }
 .contact-page .right-content span a:hover i {
-	background-color: #FFCF52;
+	background-color: #002752;
 }
 .contact-page .right-content .button {
 	cursor: pointer;
-	background-color: #FFCF52;
+	background-color: #002752;
 	outline: none;
 	border-radius: 5px;
 	padding: 10px 15px;
@@ -754,3 +755,14 @@ a {
 .text-muted {
 	display: none;
 }
+
+/* Input visibility fix */
+
+::placeholder {
+	color: #eee;
+	opacity: 1; /* Firefox */
+  }
+  
+  ::-ms-input-placeholder { /* Edge 12 -18 */
+	color: #eee;
+  }
